--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ Page</title>
-    <link rel="stylesheet" href="Styles/style.css" /> <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" /> <!-- Stylesheet -->
 
     <!-- Inter Font (Google Fonts) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
